Fix background scale on mobile device

--- a/laerdal/laerdal.css
+++ b/laerdal/laerdal.css
@@ -1,4 +1,4 @@
-.back {
+html {
   background: url("image/back-2048.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -6,6 +6,10 @@
   background-size: cover;
   height: 100%;
   width: 100%;
+}
+
+body {
+  background: transparent;
 }
 
 .title {
@@ -96,5 +100,21 @@ footer p {
 
   section {
     padding: 150px 0;
+  }
+}
+
+
+@media screen and (max-device-width : 1024px)  {
+  html {
+    background: url("image/back-1024.jpg") no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  body {
+    height:100%;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 }
